--- a/.github/workflows/OpenWrt-Build.yml
+++ b/.github/workflows/OpenWrt-Build.yml
@@ -32,13 +32,13 @@ jobs:
           fi
 
       - name: Clone OpenWrt source
-        run: |
-          rm -rf openwrt
-          git clone --depth=1 --branch "${{ steps.get_latest_tag.outputs.latest_tag }}" https://github.com/openwrt/openwrt.git
+          run: |
+              echo "🧹 清理已有 openwrt 目录（如存在）"
+              rm -rf openwrt
 
-      - name: Clone OpenWrt source
-        run: |
-          git clone --depth=1 --branch "${{ steps.get_latest_tag.outputs.latest_tag }}" https://github.com/openwrt/openwrt.git
+              echo "📥 克隆 OpenWrt 源码 tag：${{ steps.get_latest_tag.outputs.latest_tag }}"
+              git clone --depth=1 --branch "${{ steps.get_latest_tag.outputs.latest_tag }}" https://github.com/openwrt/openwrt.git
+
 
       - name: 🧪 Test extract OpenWrt version from version.mk
         run: |
